# OpenCLStudy

./: .gitignore  CMakeLists.txt  README.md
CxxBindingV1Sample/: CMakeLists.txt  main.cpp
CxxBindingV2Sample/: CMakeLists.txt  main.cpp
CxxEnumeratePlatformsDevices/: CMakeLists.txt  main.cpp
CxxHelloWorld/: CMakeLists.txt  kernel.cl  main.cpp
CxxMultiply/: CMakeLists.txt  main.cpp
CxxMultiplyAllocHostPtr/: CMakeLists.txt  main.cpp
CxxMultiplyKernelFunctor/: CMakeLists.txt  main.cpp
CxxMultiplyUseDefault/: CMakeLists.txt  kernel.cl  main.cpp
CxxMultiplyUseHostPtr/: CMakeLists.txt  main.cpp
CxxOfflineCompiler/: CMakeLists.txt  main.cpp
cmake/: GenerateCLHppWrapperHeader.cmake
cmake/templates/: cl2Wrapper.hpp.in  clWrapper.hpp.in
